==> liusion-ai/Smart_Home/嵌入式设备代码/智能家居/hardware/src/mq2.c <==
#include "mq2.h"

/*****************辰哥单片机设计******************
											STM32
 * 文件			:	MQ-2烟雾传感器c文件                   
 * 版本			: V1.0
 * 日期			: 2024.8.21
 * MCU			:	STM32F103C8T6
 * 接口			:	见代码						
 * IP账号		:	辰哥单片机设计（同BILIBILI|抖音|快手|小红书|CSDN|公众号|视频号等）
 * 作者			:	辰哥
 * 工作室		: 异方辰电子工作室
 * 讲解视频	:	https://www.bilibili.com/video/BV1J9WMeGE3C/?share_source=copy_web
 * 官方网站	:	www.yfcdz.cn

**********************BEGIN***********************/		

void MQ2_Init(void)
{
	#if MODE
	{
		GPIO_InitTypeDef GPIO_InitStructure;
		
		RCC_APB2PeriphClockCmd (MQ2_AO_GPIO_CLK, ENABLE );	// 打开 ADC IO端口时钟
		GPIO_InitStructure.GPIO_Pin = MQ2_AO_GPIO_PIN;					// 配置 ADC IO 引脚模式
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AIN;		// 设置为模拟输入
		
		GPIO_Init(MQ2_AO_GPIO_PORT, &GPIO_InitStructure);				// 初始化 ADC IO

		ADCx_Init();
	}
	#else
	{
		GPIO_InitTypeDef GPIO_InitStructure;
		
		RCC_APB2PeriphClockCmd (MQ2_DO_GPIO_CLK, ENABLE );	// 打开连接 传感器DO 的单片机引脚端口时钟
		GPIO_InitStructure.GPIO_Pin = MQ2_DO_GPIO_PIN;			// 配置连接 传感器DO 的单片机引脚模式
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;			// 设置为上拉输入
		
		GPIO_Init(MQ2_DO_GPIO_PORT, &GPIO_InitStructure);				// 初始化 
		
	}
	#endif
	
}

#if MODE
uint16_t MQ2_ADC_Read(void)
{
	//设置指定ADC的规则组通道，采样时间
	return ADC_GetValue(ADC_CHANNEL, ADC_SampleTime_55Cycles5);
}
#endif

uint16_t MQ2_GetData(void)
{
	
	#if MODE
	uint32_t  tempData = 0;
	u8 i= 0;
	for (;i < MQ2_READ_TIMES; i++)
	{
		tempData += MQ2_ADC_Read();
		DelayMs(5);
	}

	tempData /= MQ2_READ_TIMES;
	return tempData;
	
	#else
	uint16_t tempData;
	tempData = !GPIO_ReadInputDataBit(MQ2_DO_GPIO_PORT, MQ2_DO_GPIO_PIN);
	return tempData;
	#endif
}


#if MODE
float MQ2_GetData_PPM(void)
{
	
	float  tempData = 0;
	uint8_t i = 0;
	float R0=6.64;
	float Vol = 0;
	float RS = 0;
	float ppm = 0;
	for (; i < MQ2_READ_TIMES; i++)
	{
		tempData += MQ2_ADC_Read();
		DelayMs(5);
	}
	tempData /= MQ2_READ_TIMES;
	
	Vol = (tempData*5/4096);
	RS = (5-Vol)/(Vol*0.5);	
	ppm = pow(11.5428*R0/RS, 0.6549f);
	
	return ppm;
	
}
#endif
